test/semantic-errors/24.pas
program p;
procedure f(r:real);
begin writeln(1)end;
begin f()end.
